# TKA

./: CMakeLists.txt  Makefile  README.md  TKA.pro  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  playcontroler.cpp  playcontroler.h  player.cpp  player.h  src.qrc  threedimage.cpp  threedimage.h  threedimage.ui  videoPlayer.h  videoPlayer.ui  videodlg.cpp  videodlg.h
